amelioration des fonctionnalités
